--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "mocha": "^1.20.1"
   },
   "files": [
-    "index.js"
+    "index.js",
+    "entries.js",
+    "serializers.js"
   ],
   "dependencies": {
     "bluebird": "^2.2.2",
