--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash.keys": "^2.4.1",
     "lodash.map": "^2.4.1",
     "lodash.merge": "^2.4.1",
+    "make-error": "^0.3.0",
     "strip-json-comments": "^1.0.1"
   },
   "optionalDependencies": {
