--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "lodash.map": "^2.4.1",
     "lodash.merge": "^2.4.1",
     "make-error": "^0.3.0",
-    "strip-json-comments": "^1.0.1"
+    "strip-json-comments": "^1.0.1",
+    "xdg-basedir": "^1.0.0"
   },
   "optionalDependencies": {
     "ini": "^1.2.1",
