--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "bluebird": "^2.2.2",
+    "fs-promise": "^0.3.1",
     "glob": "^4.0.5",
     "lodash.findkey": "^2.4.1",
     "lodash.flatten": "^2.4.1",
