--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "keywords": [],
   "scripts": {
+    "lint": "standard",
     "test": "mocha --require must index.spec.js"
   },
   "repository": {
@@ -16,7 +17,8 @@
   "devDependencies": {
     "mocha": "^2.1.0",
     "mock-fs": "^2.5.0",
-    "must": "^0.12.0"
+    "must": "^0.12.0",
+    "standard": "^4.0.1"
   },
   "files": [
     "index.js",
