--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   ],
   "dependencies": {
     "bluebird": "^2.2.2",
+    "debug": "^2.2.0",
     "fs-promise": "^0.3.1",
     "glob": "^5",
     "lodash.findkey": "^3",
