--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
-  - 'stable'
-  - 'iojs'
-  - 'unstable'
+  - 'iojs-v2'
+  - 'iojs-v1'
+  - '0.12'
+  - '0.10'
+  - '0.8'
