--- a/package.json
+++ b/package.json
@@ -1,38 +1,59 @@
 {
   "name": "app-conf",
   "version": "0.5.0",
+  "license": "ISC",
+  "author": "Julien Fontanet <julien.fontanet@isonoe.net> (http://julien.isonoe.net/)",
   "description": "",
   "keywords": [],
-  "scripts": {
-    "lint": "standard",
-    "posttest": "npm run lint",
-    "test": "mocha --require must index.spec.js"
-  },
+  "homepage": "https://github.com/julien-f/nodejs-app-conf",
+  "bugs": "https://github.com/julien-f/nodejs-app-conf/issues/",
   "repository": {
     "type": "git",
-    "url": "http://github.com/julien-f/nodejs-app-conf"
-  },
-  "bugs": "https://github.com/julien-f/nodejs-app-conf/issues",
-  "author": "Julien Fontanet <julien.fontanet@isonoe.net> (http://julien.isonoe.net/)",
-  "license": "ISC",
-  "devDependencies": {
-    "mocha": "^3.4.2",
-    "mock-fs": "^4.4.1",
-    "must": "^0.13.1",
-    "standard": "^10.0.2"
+    "url": "https://github.com/julien-f/nodejs-app-conf"
   },
   "files": [
-    "index.js",
     "entries.js",
+    "index.js",
     "serializers.js",
     "unknown-format-error.js"
   ],
+  "engines": {
+    "node": ">=8"
+  },
   "dependencies": {
-    "bluebird": "^3.4.0",
-    "debug": "^2.6.8",
-    "glob": "^7.1.2",
-    "lodash": "^4.13.1",
-    "make-error": "^1.3.0",
+    "bluebird": "^3.5.3",
+    "glob": "^7.1.3",
+    "lodash": "^4.17.11",
+    "make-error": "^1.3.5",
     "xdg-basedir": "^3.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^8.0.0",
+    "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.1.4",
+    "jest": "^23.6.0",
+    "mock-fs": "^4.7.0",
+    "prettier": "^1.15.2",
+    "rimraf": "^2.6.2"
+  },
+  "scripts": {
+    "dev-test": "jest --bail --watch",
+    "pretest": "eslint --ignore-path .gitignore --fix .",
+    "test": "jest"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "npm test"
+    }
+  },
+  "jest": {
+    "collectCoverage": true,
+    "testEnvironment": "node",
+    "testRegex": "\\.spec\\.js$"
   }
 }
