--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/julien-f/nodejs-app-conf"
   },
   "files": [
+    "_pMap.js",
     "entries.js",
     "index.js",
     "serializers.js",
@@ -21,10 +22,10 @@
     "node": ">=8"
   },
   "dependencies": {
-    "bluebird": "^3.5.3",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
     "make-error": "^1.3.5",
+    "promise-toolbox": "^0.11.0",
     "xdg-basedir": "^3.0.0"
   },
   "devDependencies": {
