--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=6"
   },
   "dependencies": {
+    "debug": "^4.1.0",
     "glob": "^7.1.3",
     "lodash": "^4.17.11",
     "make-error": "^1.3.5",
