--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^7.23.0",
+    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.2.0",
-    "eslint-config-standard": "^16.0.2",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-n": "^15.2.0",
+    "eslint-plugin-promise": "^6.0.0",
     "husky": "^4",
-    "lint-staged": "^10",
+    "lint-staged": "^12",
     "mock-fs": "^5.1.2",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.0",
-    "tap": "^15.1.6"
+    "tap": "^16.2.0"
   },
   "scripts": {
     "dev-test": "tap --no-check-coverage --watch",
