--- a/package.json
+++ b/package.json
@@ -22,44 +22,39 @@
   ],
   "bin": "./cli.js",
   "engines": {
-    "node": ">=8.10"
+    "node": ">=9.9"
   },
   "dependencies": {
     "chokidar": "^3.5.1",
     "debug": "^4.1.0",
-    "glob": "^7.1.3",
+    "glob": "^8.1.0",
     "lodash": "^4.17.11",
     "make-error": "^1.3.5",
     "promise-toolbox": "^0.21.0",
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.15.0",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-n": "^15.2.0",
-    "eslint-plugin-promise": "^6.0.0",
-    "husky": "^4",
-    "lint-staged": "^12",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "mock-fs": "^5.2.0",
-    "prettier": "^2.2.1",
-    "rimraf": "^3.0.0",
-    "tap": "^16.2.0"
+    "prettier": "^3.2.5",
+    "test": "^3.3.0"
   },
   "scripts": {
-    "dev-test": "tap --no-check-coverage --watch",
-    "test": "tap --no-check-coverage"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged && npm run test"
-    }
+    "test": "node--test && true",
+    "prepare": "husky"
   },
   "lint-staged": {
-    "*.js": [
-      "prettier --write",
-      "eslint --ignore-pattern '!*'"
-    ]
+    "*": [
+      "npm test",
+      "prettier --ignore-unknown --write"
+    ],
+    "*.{{,c,m}j,t}s{,x}": "eslint --ignore-pattern '!*'"
   }
 }
