--- a/package.json
+++ b/package.json
@@ -23,28 +23,22 @@
   ],
   "bin": "./cli.js",
   "engines": {
-    "node": ">=9.9"
+    "node": ">=16"
   },
   "dependencies": {
-    "chokidar": "^3.5.1",
-    "debug": "^4.1.0",
-    "glob": "^8.1.0",
-    "lodash": "^4.17.11",
-    "make-error": "^1.3.5",
-    "promise-toolbox": "^0.21.0",
+    "chokidar": "^4.0.3",
+    "debug": "^4.4.0",
+    "glob": "^10.4.5",
+    "lodash": "^4.17.21",
     "xdg-basedir": "^4.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-n": "^16.6.2",
-    "eslint-plugin-promise": "^6.1.1",
+    "@eslint/js": "^9.19.0",
+    "globals": "^15.14.0",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "mock-fs": "^5.2.0",
-    "prettier": "^3.2.5",
+    "mock-fs": "^5.4.1",
+    "prettier": "^3.4.2",
     "test": "^3.3.0"
   },
   "scripts": {
